Bug 259096 - RemoteInspectorSocketWin.cpp: warning: cast from 'struct sockaddr *' to 'struct sockaddr_in *' increases required alignment from 2 to 4
Summary: RemoteInspectorSocketWin.cpp: warning: cast from 'struct sockaddr *' to 'stru...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Fujii Hironori
URL:
Keywords: InRadar
Depends on:
Blocks: 171618
  Show dependency treegraph
 
Reported: 2023-07-10 23:45 PDT by Fujii Hironori
Modified: 2023-07-11 21:35 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fujii Hironori 2023-07-10 23:45:32 PDT
clang-cl reports the following warning for Windows port.

[1177/6517] Building CXX object Source\JavaScriptCore\CMakeFiles\JavaScriptCore.dir\inspector\remote\socket\win\RemoteInspectorSocketWin.cpp.obj
C:\home\webkit\gc\Source\JavaScriptCore\inspector\remote\socket\win\RemoteInspectorSocketWin.cpp(172,33): warning: cast from 'struct sockaddr *' to 'struct sockaddr_in *' increases required alignment from 2 to 4 [-Wcast-align]
            address.sin_addr = ((struct sockaddr_in*)(res->ai_addr))->sin_addr;
                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 warning generated.
Comment 1 Fujii Hironori 2023-07-10 23:55:13 PDT
Pull request: https://github.com/WebKit/WebKit/pull/15728
Comment 2 EWS 2023-07-11 21:32:14 PDT
Committed 265984@main (f43f814b129e): <https://commits.webkit.org/265984@main>

Reviewed commits have been landed. Closing PR #15728 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-07-11 21:35:19 PDT
<rdar://problem/112118935>