RemoteInspectorSocketWin.cpp: warning: cast from 'struct sockaddr *' to 'struct sockaddr_in *' increases required alignment from 2 to 4 https://bugs.webkit.org/show_bug.cgi?id=259096

Reviewed by Ross Kirsling.

clang-cl reported the following warning for Windows port.

> JavaScriptCore\inspector\remote\socket\win\RemoteInspectorSocketWin.cpp(172,33): warning: cast from 'struct sockaddr *' to 'struct sockaddr_in *' increases required alignment from 2 to 4 [-Wcast-align]
>             address.sin_addr = ((struct sockaddr_in*)(res->ai_addr))->sin_addr;
>                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

* Source/JavaScriptCore/inspector/remote/socket/win/RemoteInspectorSocketWin.cpp:
(Inspector::Socket::connect): Use reinterpret_cast instead of C style cast to suppress the warning.

Canonical link: https://commits.webkit.org/265984@main